# aws-lambda-runtimes-performance

./: .gitignore  build.sh
java-graalvm-lambda/: Dockerfile.graalvm
rust-aws-lambda/: Cargo.toml  Dockerfile
rust-aws-lambda/src/: main.rs
