[package]
name = "rust-aws-lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
lambda_runtime = "0.7.3"
lambda_http = "0.7.3"
log = "0.4.14"
serde = "1.0.127"
serde_json = "1.0.66"
simple_logger = "4.0.0"
tokio = "1.10.0"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
uuid = { version = "1.3.0", features = ["v4"] }
lazy_static = "1.4.0"
#comment for windows
openssl = { version = "=0.10.45", features = ["vendored"] }
aws_lambda_events = "0.7.3"